--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "13.2.2",
     "@angular/platform-browser-dynamic": "13.2.2",
     "@angular/router": "13.2.2",
+    "dayjs": "^1.10.7",
     "normalize.css": "^8.0.1",
     "rxjs": "7.5.4",
     "tslib": "2.3.1",
