--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler-cli": "13.2.2",
     "@types/jasmine": "3.10.3",
     "@types/node": "12.11.7",
+    "angular-cli-ghpages": "^1.0.0",
     "typescript": "4.5.5"
   }
 }
