--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -23,6 +23,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/i-perfect",
+            "baseHref": "/iPerfect/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
